# TicTacToe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Source/GridWorks/: gridworks.h
Source/GridWorks/GameLogic/: GameConfiguration.cpp  GameConfiguration.h  GameLogic.cpp  GameLogic.h  GameState.h  TurnManager.cpp  TurnManager.h
Source/GridWorks/Grid/: Grid.cpp  Grid.h
Source/GridWorks/Player/: Moves.cpp  Moves.h  Player.cpp  Player.h
Source/Sandbox/: main.cpp
Source/Sandbox/GUI/: BasicButton.h  BasicText.h  GUI.cpp  GUI.h
Tests/: CMakeLists.txt
Tests/Core/: CMakeLists.txt
Tests/Core/Core/: CMakeLists.txt  CoreTesting.cpp
Tests/Core/GameLogic/: CMakeLists.txt  GameLogicTesting.cpp
Tests/Core/Grid/: CMakeLists.txt  GridTesting.cpp
Tests/Core/TicTacToeLogic/: CMakeLists.txt  TicTacToeLogicTesting.cpp
Tools/: TestRunner.ps1  build.bat  build.py
